# linuga-ferris

./: .gitignore  Cargo.toml
crates/lingua-cli/: Cargo.toml
crates/lingua-cli/src/: main.rs  tui.rs
crates/lingua-core/: Cargo.toml
crates/lingua-core/src/: api.rs  config.rs  lib.rs
crates/lingua-core/src/vocab/: db.rs  lemma.rs
src/: api.rs  config.rs  error.rs  main.rs
src/vocab/: db.rs  mod.rs
