[package]
name = "lingua-ferris"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"]}
