[package]
name = "lingua-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lingua-ferris"
path = "src/main.rs"

[dependencies]
lingua-core = { path = "../lingua-core"}
tokio = { version = "1", features = ["full"] }
ratatui = {version = "0.29", features = ["unstable-rendered-line-info"]} 
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
